# livekit-voice-agent

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: LLM部署.md  LiveKit-Server部署.md  系统架构与数据流.md
qwen-asr-streaming-service/: README.md  pyproject.toml  server.py
qwen-tts-service/: README.md  pyproject.toml  server.py
src/: agent.py  agent_Local.py  agent_Online.py  assistant.py
src/rag/: indexer.py  retriever.py
