[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[minimax,turn-detector]~=1.4",
    "livekit-plugins-openai~=1.4",
    "livekit-plugins-silero>=1.4.5",
    "livekit-plugins-volcengine>=1.2.8",
    "python-dotenv",
    "websockets>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
asr_service = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "qwen-asr[vllm]>=0.1.0",
    "uvicorn[standard]>=0.34.0",
    "webrtcvad-wheels>=2.0.14",
]
tts_service = [
    "fastapi>=0.115.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.13.0",
    "torch>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
