[project]
name = "qwen-tts-service"
version = "0.1.0"
description = "Qwen3-TTS HTTP service for LiveKit integration"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.13.0",
    "torch>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
